src/styles.css
.visual-editor__container {
    --outline-transition: all 0.15s ease-in;
}

.cslp-edit-mode {
    outline: 1px dashed #6c5ce7 !important;
    position: relative !important;
}

button#cslp-tooltip {
    padding: 0;
    display: flex;
    outline: none;
    border: none;
    z-index: 200 !important;
    position: fixed;
    margin: 0;
    height: 35px;
    width: 72px;
    background: white;
    font-weight: 400 !important;
    color: #718096 !important;
    transition: background 0.2s;
    text-align: center !important;
    border-radius: 8px !important;
    font-size: 14px !important;
    justify-content: space-around;
    align-items: center;
    box-shadow: 0px 8px 20px 0px #2222221a;
    box-sizing: border-box;
    top: -100%;
}

button#cslp-tooltip div {
    display: flex;
    justify-content: space-around;
    border-radius: 6px !important;
    cursor: pointer;
}

button#cslp-tooltip div.cslp-tooltip-child:hover {
    background: #edf2f7;
}

button#cslp-tooltip div.cslp-tooltip-child:active:hover {
    background: #c7d0e1;
}

button#cslp-tooltip > div {
    display: flex;
    justify-content: space-evenly;
    white-space: nowrap;
    width: 70px;
}

button#cslp-tooltip .cslp-tooltip-child.singular {
    padding: 9px 1px;
}

div.multiple div.cslp-tooltip-child {
    padding: 9px;
}

div.multiple div.cslp-tooltip-child:before {
    opacity: 0;
    font-size: 12px;
    font-weight: 400;
    pointer-events: none;
    content: attr(data-title);
    color: white;
    padding: 5px 10px;
    border-radius: 4px;
    position: absolute;
    background: #4a5568;
    top: -30px;
    transition: 0.2s all ease-in-out;
}

div.multiple div.cslp-tooltip-child:hover:before {
    opacity: 1;
}

.visual-editor__cursor {
    visibility: hidden;
    height: 0;
}
.visual-editor__cursor.visible {
    visibility: visible;
    position: fixed;
    top: 0;
    left: 0;

    color: #fff;

    height: auto;
    padding: 0 10px;

    display: flex;
    align-items: center;
    justify-content: center;

    pointer-events: none !important;
    position: fixed !important;
    cursor: none;
    z-index: 1000;
}
.visual-editor__container {
    font-family: "Inter", sans-serif;
}
.visual-editor__overlay__wrapper {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    visibility: hidden;
    z-index: 199;

    pointer-events: none;
}
.visual-editor__overlay--outline {
    position: absolute;
    outline: 4px solid #715cdd;
    transition: var(--outline-transition);
}
.visual-editor__overlay__wrapper.visible {
    visibility: visible;
}
.visual-editor__overlay {
    background: rgba(0, 0, 0, 0.3);
    box-sizing: content-box;
    pointer-events: all;
    position: absolute;
    transition: var(--outline-transition);
}
.cslp-tooltip {
    /* visibility: hidden; */
}
.visual-editor__add-button {
    position: absolute;
    pointer-events: all;

    background: #ffffff;
    color: #475161;

    border-radius: 4px;
    border: 1px solid #6c5ce7;

    height: 32px;
    min-width: 32px;
    max-width: 120px;
    transform: translate(-50%, -50%);

    font-weight: 600;
    color: #6c5ce7;
    overflow: hidden;

    z-index: 200;

    display: grid;
    grid-template-columns: min-content 0fr;
    align-items: center;
    gap: 0;

    transition: grid-template-columns 0.25s, left 0.15s ease-in,
        top 0.15s ease-in, gap 0.15s ease-in;

    &:hover {
        grid-template-columns: min-content 1fr;
        gap: 8px;
    }
}

.visual-editor__add-button svg {
    fill: #6c5ce7;
}

.visual-editor__add-button-label {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.visual-editor__start-editing-btn {
    text-decoration: none;
    position: fixed;
    bottom: 30px;
    right: 30px;
    box-shadow: 0px 4px 15px 0px rgba(108, 92, 231, 0.2),
        0px 3px 14px 3px rgba(0, 0, 0, 0.12),
        0px 8px 10px 1px rgba(0, 0, 0, 0.14);
    display: inline-flex;
    padding: 0.5rem 1rem;
    justify-content: center;
    align-items: center;
    gap: 0.5rem;

    border-radius: 4px;
    border: 1px solid transparent;
    background: #6c5ce7;
    transition: background-color 0.15s ease-in-out,
        border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out,
        -webkit-box-shadow 0.15s ease-in-out;
}
.visual-editor__start-editing-btn:hover {
    background-color: #5d50be;
}
.visual-editor__start-editing-btn:focus {
    outline: none;
    box-shadow: 0 0 0 2px #ada4f4;
}
.visual-editor__start-editing-btn > span {
    color: #fff;
    /* Body/P1 Bold */
    font-size: 1rem;
    font-family: Inter;
    font-weight: 600;
    line-height: 150%;
    letter-spacing: 0.01rem;
    text-transform: capitalize;
}
.visual-editor__cursor-icon {
    height: 40px;
    width: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: #5d50be;
    border-radius: 50%;
    position: absolute;
    top: 0;
    left: 0;
}

.visual-editor__cursor-wrapper {
    position: relative;
}
.visual-editor__cursor-pointer {
    position: absolute;
    top: -8px;
    left: -8px;
}

.visual-editor__cursor-icon--loader {
    animation: visual-editor__spinner 1s linear infinite;
}

@keyframes visual-editor__spinner {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

.visual-editor__focused-toolbar {
    position: absolute;
    transform: translateY(-100%);
    z-index: 200;
    width: 0;
    display: flex;
    align-items: end;
    transition: var(--outline-transition);
}

.visual-editor__focused-toolbar__field-label-wrapper__current-field {
    padding: 3px 8px;
    background: #6c5ce7;
    color: #fff;
    z-index: 1;
    display: flex;
    justify-content: space-between;
    width: fit-content;
    padding: 4px !important;
}

.visual-editor__focused-toolbar__field-label-wrapper__current-field {
    display: flex;
    align-items: center;
}

.visual-editor__focused-toolbar__field-label-wrapper__current-field:disabled {
    filter: contrast(0.7);
}

.visual-editor__focused-toolbar__field-label-wrapper__parent-field {
    pointer-events: none;
    color: #5d50be;
    padding: 4px !important;
    margin-bottom: 3px;
    display: none;
    width: fit-content;
    position: absolute;
}

.field-label-dropdown-open
    .visual-editor__focused-toolbar__field-label-wrapper__parent-field {
    pointer-events: all;
    visibility: visible;
    display: initial;
}

.visual-editor__focused-toolbar__field-label-wrapper {
    display: flex;
    flex-direction: column-reverse;
    position: relative;
}

.visual-editor__button {
    background-color: transparent;
    border: 1px solid transparent;
    border-radius: 4px;
    font-size: 16px;
    font-weight: 600;
    line-height: 100%;
    padding: 8px 16px;
    text-align: center;
    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
        border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
    vertical-align: middle;
}

.visual-editor__button--primary {
    background-color: #6c5ce7;
    color: #fff;

    &:hover {
        background-color: #5d50be;
    }
}

.visual-editor__button--secondary {
    background-color: #f9f8ff;
    border: 1px solid #6c5ce7;
    color: #6c5ce7;
}

.visual-editor__button--edit svg{
    height: 16px;
    width: 16px;
}
.visual-editor__button--edit svg path{
    fill: #475161;
}
.visual-editor__field-icon svg {
    height: 16px;
    width: 16px;
    margin-right: 5px;
}

.visual-editor__focused-toolbar__button-group .visual-editor__button:hover {
    background-color: #f5f5f5;
}

.visual-editor__focused-toolbar__field-label-wrapper__caret {
    transform: rotate(0);
    transition: transform 0.2s ease-in-out;
    height: 16px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.field-label-dropdown-open
    .visual-editor__focused-toolbar__field-label-wrapper__caret {
    transform: rotate(180deg);
}

.visual-editor__focused-toolbar__text {
    font-family: Inter, "sans-serif";
    font-size: 0.75rem;
    font-style: normal;
    font-weight: 400;
    line-height: 150%; /* 1.125rem */
    letter-spacing: 0.015rem;
    max-width: 150px;
    overflow: hidden;
    text-overflow: ellipsis;
    text-wrap: nowrap;
}

.visual-editor__focused-toolbar__field-label-wrapper__current-field
    .visual-editor__focused-toolbar__text {
    padding-right: 3px;
    height: 16px;
}

.visual-editor__focused-toolbar__multiple-field-toolbar {
    z-index: 200;
}

.visual-editor__focused-toolbar__multiple-field-toolbar svg {
    height: 15px;
    width: 15px;
}

.visual-editor__focused-toolbar__button-group {
    display: flex;
    margin-left: 4px;
    background: #fff;
    border-radius: 4px;

    &:has(.visual-editor__button) {
        padding: 2px;
        gap: 1px;
    }
}

.visual-editor__focused-toolbar__button-group .visual-editor__button {
    background-color: #fff;
    border-color: transparent;
    color: #475161;
    padding: 1px;
    min-width: 16px;
    min-height: 16px;
}

.visual-editor__rotate--90 {
    transform: rotate(90deg);
}

.visual-editor__focused-toolbar--field-disabled {
    pointer-events: none;
    cursor: not-allowed;
}
.visual-editor__focused-toolbar--field-disabled
    .visual-editor__focused-toolbar__field-label-wrapper__current-field {
    background: #909090;
}
.visual-editor__cursor-disabled .visual-editor__cursor-icon {
    background: #909090;
}
.visual-editor__cursor-disabled .visual-editor__cursor-pointer path {
    fill: #909090;
}
.visual-editor__tooltip {
    pointer-events: all;
}
.visual-editor__tooltip svg {
    pointer-events: none;
}

.visual-editor__tooltip:before {
    content: attr(data-tooltip);
    position: absolute;

    bottom: 20px;
    left: -16px;
    margin-bottom: 16px;

    padding: 12px;
    border-radius: 4px;

    width: max-content;
    max-width: 200px;
    display: none;

    color: #fff;
    background: #767676;
    font-family: Inter;
    font-size: 0.75rem;
    font-style: normal;
    font-weight: 400;
    line-height: 132%; /* 0.99rem */
    letter-spacing: 0.015rem;
}
.visual-editor__tooltip:hover:before,
.visual-editor__tooltip:hover:after {
    display: block;
}
.visual-editor__tooltip:after {
    content: "";
    position: absolute;

    bottom: 17px;

    /* the arrow */
    border: 10px solid #000;
    border-color: #767676 transparent transparent transparent;

    display: none;
}

.visual-editor__empty-block {
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 1rem;
    min-height: 100px;
}

.visual-editor__empty-block-title {
    font-size: 0.95rem;
    font-family: Inter;
    font-weight: 400;
    line-height: 100%;
    color: #647696;
}

.visual-editor__empty-block-add-button {
    height: 32px;
    border-radius: 4px;
    background: #f9f8ff;
    border-color: #6c5ce7;
    border-width: 1px;
    padding: 8px 16px 8px 16px;
    font-size: 0.9rem;
    font-family: Inter;
    font-weight: 600;
    color: #6c5ce7;
    padding-block: 0px;
    letter-spacing: 0.01rem;
}

.visual-editor__hover-outline {
    position: absolute;
    outline: 2px dashed #6c5ce7;
    transition: var(--outline-transition);
}

.visual-editor__hover-outline--hidden {
    visibility: hidden;
}

.visual-editor__hover-outline--unclickable {
    pointer-events: none;
}

.visual-editor__hover-outline--disabled {
    outline: 2px dashed #909090;
}

.visual-editor__default-cursor--disabled {
    cursor: none;
}
.visual-editor__draft-field{
    outline: 2px dashed var(--Brand-Colors-Brand-Orange, #EB5646);
}

